Fixed value not showing with radio/select/date box under edit/[id]

--- a/app/admin/edit/[id]/styles.module.css
+++ b/app/admin/edit/[id]/styles.module.css
@@ -56,6 +56,18 @@
 .second_line {
     margin-top: 1rem;
     font-size: 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.second_line label {
+    width: 20%;
+}
+
+.text {
+    margin-left: 1rem;
+    height: 1.5rem;
+    width: 80%;
 }
 
 .third_line {
@@ -65,20 +77,28 @@
     justify-content: space-evenly;
 }
 
-.full {
-    margin: 1rem;
-    background: #1DCD9F;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0.75rem;
+.status, .task_catalog, .date {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.fail {
-    background-color: red;
-    color: red
+.label {
+    font-size: 1.5rem;
 }
-.success {
-    background-color: white;
-    color: black;
+
+.radio_group,.task_catalog select,.date input {
+    margin-top: 1rem;
 }
+
+.last_line {
+    display: flex;
+    flex-direction: column;
+}
+
+.last_line textarea {
+    width: 100%;
+    height: 30vh;
+}
+
